# dashboard

./: .env  Cargo.toml  README.md  Readme.md  architektura.dot  dashboard_2025-11-01_graphviz.code  docker-compose.yaml  poznamky.md  run.sh  wget-log
logs/: dashboard.log.2025-10-31  dashboard.log.2025-11-01  dashboard.log.2025-11-02  dashboard.log.2025-11-03  dashboard.log.2025-11-04  dashboard.log.2025-11-05  dashboard.log.2025-11-06  dashboard.log.2025-11-07  dashboard.log.2025-11-08  dashboard.log.2025-11-09
src/: logging.rs  main.rs  models.rs  state.rs
src/routes/: api.rs  mod.rs  web.rs
src/services/: db_postgres.rs  db_valkey.rs  mod.rs  mqtt_client.rs  search_manticore.rs
templates/: index.html  layout.html  mqtt.html  postgres.html  search.html  timescale.html  valkey.html
