[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
# Jádro pro asynchronní běh
tokio = { version = "1.37.0", features = ["full"] }

# Webový framework (VRACÍME SE K MODERNÍ VERZI 0.7)
axum = "0.7.5"

# Logovací fasáda
tracing = "0.1.40" # Tento může zůstat
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] } # <-- Downgrade na .16
tracing-appender = "0.2.3" # Tento je v pořádku (potřebuje .16)
# tracing-syslog = "0.2.0" # <-- Downgrade na verzi kompatibilní s .16

# Data a Serializace
serde = { version = "1.0.200", features = ["derive"] }

# NOVÝ ŠABLONOVACÍ ENGINE
tera = "1.20.0"

# nacteni dat z env + postgresql
dotenvy = "0.15"

# postgres s time serie
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }

# valkey
redis = { version = "0.25.2", features = ["tokio-comp"] }

# time-serie 
chrono = { version = "0.4", features = ["serde"] }

# mqtt
rumqttc = "0.24.0"

# HTTP klient pro volání Manticore API
reqwest = { version = "0.12", features = ["json"] }
# Pro vytváření JSON dotazů a parsování odpovědí
serde_json = "1.0"

# NOVÁ ZÁVISLOST pro servírování souborů
tower-http = { version = "0.5", features = ["fs"] }